# rdn

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  archive.rs  calculator.rs  config.rs  dbf.rs  dirtree.rs  editor.rs  file_ops.rs  filefind.rs  help.rs  keys.rs  main.rs  panel.rs  screensaver.rs  splitfile.rs  tetris.rs  theme.rs  types.rs  ui.rs  usermenu.rs  viewer.rs
