[package]
name = "rdn"
version = "0.1.0"
edition = "2021"
description = "A modern two-panel file manager inspired by Dos Navigator"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
unicode-width = "0.2"
open = "5"
fs_extra = "1.3"
trash = "5"
rand = "0.9"
filetime = "0.2"
libc = "0.2"
dirs = "5"
zip = "2"
base64 = "0.22"
tar = "0.4"
flate2 = "1"
arboard = "3"
